--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,27 @@ version = "0.1.0"
 authors = ["sisyphus"]
 edition = "2018"
 
+[features]
+default = []
+metal = ["gfx-backend-metal"]
+dx12 = ["gfx-backend-dx12"]
+vulkan = ["gfx-backend-vulkan"]
+
 [dependencies]
 winit = "0.18"
+log = "0.4.0"
+simple_logger = "1.0"
+gfx-hal = "0.1"
+arrayvec = "0.4"
+
+[dependencies.gfx-backend-vulkan]
+version = "0.1"
+optional = true
+
+[target.'cfg(target_os = "macros")'.dependencies.gfx-backend-metal]
+version = "0.1"
+optional = true
+
+[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
+version = "0.1"
+optional = true
